--- a/src/NRustLightning.GUI/src/NRustLightning.GUI.Server/appsettings.json
+++ b/src/NRustLightning.GUI/src/NRustLightning.GUI.Server/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "RPCHost": "localhost",
+  "RPCHost": "http://localhost",
   "RPCPort": 12120,
   "RPCPassword": "HmcwPBb0KRWFWlSXkSY_DI70JekYyAr5CPx2N2i8RjA=",
   "RPCUser": "johndoe",
