GUI: update Wallet import view

--- a/src/NRustLightning.GUI/src/NRustLightning.GUI.Client/NRustLightning.GUI.Client.fsproj
+++ b/src/NRustLightning.GUI/src/NRustLightning.GUI.Client/NRustLightning.GUI.Client.fsproj
@@ -15,11 +15,12 @@
     <Compile Include="CoinView.fs" />
     <Compile Include="Breadcrumbs.fs" />
     <Compile Include="Wallet\Utils.fs" />
-    <Compile Include="Wallet\Initialization.fs" />
+    <Compile Include="Wallet\Import.fs" />
+    <Compile Include="Wallet\Generate.fs" />
     <Compile Include="Wallet\WalletInfo.fs" />
     <Compile Include="Wallet\Wallet.fs" />
     <Compile Include="NavMenu.fs" />
-    <Compile Include="Main2.fs" />
+    <Compile Include="Main.fs" />
     <Compile Include="Startup.fs" />
   </ItemGroup>
   <ItemGroup>
