--- a/src/NRustLightning.GUI/src/NRustLightning.GUI.Server/NRustLightning.GUI.Server.fsproj
+++ b/src/NRustLightning.GUI/src/NRustLightning.GUI.Server/NRustLightning.GUI.Server.fsproj
@@ -7,6 +7,7 @@
     <ProjectReference Include="..\..\..\NRustLightning.Infrastructure\NRustLightning.Infrastructure.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constnats.fs" />
     <Compile Include="Repository.fs" />
     <Compile Include="RPCClientProvider.fs" />
     <Compile Include="Services\ConfigurationService.fs" />
