update gui configuration

--- a/src/NRustLightning.GUI/src/NRustLightning.GUI.Server/appsettings.json
+++ b/src/NRustLightning.GUI/src/NRustLightning.GUI.Server/appsettings.json
@@ -3,5 +3,6 @@
   "RPCPort": 12120,
   "RPCPassword": "HmcwPBb0KRWFWlSXkSY_DI70JekYyAr5CPx2N2i8RjA=",
   "RPCUser": "johndoe",
-  "RPCCookieFile": ""
+  "RPCCookieFile": "",
+  "Network": "RegTest"
 }
