--- a/src/NRustLightning.GUI/src/NRustLightning.GUI.Server/appsettings.Development.json
+++ b/src/NRustLightning.GUI/src/NRustLightning.GUI.Server/appsettings.Development.json
@@ -1,8 +1,1 @@
-{
-  "RPCHost": "http://localhost",
-  "RPCPort": 12120,
-  "RPCPassword": "HmcwPBb0KRWFWlSXkSY_DI70JekYyAr5CPx2N2i8RjA=",
-  "RPCUser": "johndoe",
-  "RPCCookieFile": "",
-  "Network": "Regtest"
-}
+{"RPCHost":"http://localhost","RPCPort":12120,"RPCPassword":"HmcwPBb0KRWFWlSXkSY_DI70JekYyAr5CPx2N2i8RjA=","RPCUser":"johndoe","RPCCookieFile":"","DBPath":"/Users/joemiyamoto/.walletbiwa/data","Network":"RegTest"}
